# rekit-factory

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
.ordna/: config.yaml  orchestrate.yaml
.work/: project.json
.work/notes/: note_mrjbnx2t_9b4091a52c17.md
.work/tasks/: W-0002.md  W-0003.md  W-0004.md  W-0005.md  W-0006.md  W-0007.md  W-0008.md  W-0009.md  W-0010.md  W-0011.md  W-0012.md  W-0013.md  W-0014.md  W-0015.md  W-0016.md  W-0017.md  W-0018.md  W-0019.md  W-0020.md  W-0021.md  W-0022.md  W-0023.md  W-0024.md  W-0025.md  W-0026.md  W-0027.md  W-0028.md  W-0029.md  W-0030.md  W-0031.md  W-0032.md  W-0033.md  W-0034.md  W-0035.md  W-0036.md  W-0037.md  W-0038.md  W-0039.md  W-0040.md  W-0041.md  (+44 more)
docs/: analysis-ranges-v1.md  architecture.md  automation-hooks-v1.md  campaign-api-v1.md  campaign-archive-lifecycle.md  campaign-change-approvals-v1.md  campaign-contracts-v1.md  campaign-controller-v1.md  campaign-persistence-v1.md  campaign-policy-v1.md  e7-lab-ui.md  knowledge-ingestion.md  mission-control-outcomes-audit.md  outcome-projection.md  project-memory.md  rebaseline.md  remote-workers.md  reversebench-parallels-proof-inputs.md  safety-policy-contracts.md
docs/mockups/: e7-mission-control-v1.html  e7-mission-control-v2.html  e7-mission-control-v3.html
rekit/: __init__.py  cli.py  goalpacks.py
rekit/goalpacks/agent-risk/: GOALPACK.md  renderer.py  system-prompt.md
rekit/goalpacks/mcd/: GOALPACK.md  renderer.py  system-prompt.md
rekit/goalpacks/understand/: GOALPACK.md  renderer.py  (+1 more)
rekit/harness/: __init__.py  base.py  mock.py  pi.py  tiers.py
rekit/human/: __init__.py  channel.py  inbox.py
rekit/lab/: __init__.py  catalog.py  readmodel.py  server.py  supervisor.py
rekit/ledger/: __init__.py  artifacts.py  events.py  home.py  ledger.py  project.py  runlog.py
rekit/loop/: __init__.py  fanout.py  loop.py
rekit/skills/: __init__.py  frontmatter.py  home.py  model.py  registry.py  runner.py  sandbox.py  scoping.py
skills/dex2jar/: SKILL.md
skills/extract-archive/: SKILL.md
skills/ghidra/: SKILL.md
skills/ilspy/: SKILL.md
skills/jadx/: SKILL.md
skills/tree-summary/: SKILL.md
skills/unpack-asar/: SKILL.md
src/rekit_factory/: __init__.py  __main__.py  api.py  automation.py  automation_owner.py  campaign_contracts.py  campaign_controller.py  campaign_lifecycle.py  campaign_notification_policy.py  campaign_persistence.py  campaign_policy.py  campaign_proof.py  cli.py  control.py  dossiers.py  evidence.py  findings.py  hypotheses.py  isolation_probe.py  knowledge.py  knowledge_ingestion.py  memory.py  memory_authority.py  mission_routes.py  models.py  notification_configuration.py  notification_delivery.py  notification_outbox.py  notification_policy.py  notification_preferences.py  notification_supervisor.py  outcome_incremental.py  outcomes.py  owned_probe_inputs.py  parallels_candidate.py  parallels_effects.py  parallels_plan.py  parallels_reconciliation.py  policy_contracts.py  policy_runtime.py  (+13 more)
tasks/: T-047.md  T-048.md  T-049.md  T-050.md  T-051.md  T-053.md  T-054.md  T-055.md  T-056.md  T-057.md  T-058.md  T-059.md  T-060.md  T-061.md  T-062.md  T-064.md  T-065.md
tests/: mission_attention.test.js  mission_campaign_links_adversarial.test.js  mission_campaign_synthesis.test.js  mission_campaigns_adversarial.test.js  mission_notifications_adversarial.test.js  mission_outcomes.test.js  mission_ranges_adversarial.test.js  mission_research.test.js  test_automation_gateway.py  test_automation_owner.py  test_builtin_skills.py  test_campaign_api.py  test_campaign_api_adversarial.py  test_campaign_change_requests.py  test_campaign_change_requests_adversarial.py  test_campaign_contracts.py  test_campaign_controller.py  test_campaign_controller_adversarial.py  test_campaign_health.py  test_campaign_health_adversarial.py  test_campaign_lifecycle.py  test_campaign_notification_admission.py  test_campaign_notification_policy.py  test_campaign_persistence.py  test_campaign_policy.py  test_campaign_proof.py  test_campaign_risk_notifications.py  test_campaign_risk_producer.py  test_campaign_typed_links.py  test_campaign_typed_links_adversarial.py  test_catalog.py  test_control_plane.py  test_dossier_integration.py  test_evidence.py  test_evidence_publication.py  test_fanout.py  test_find_skill.py  test_finding_controller.py  test_findings.py  test_goalpack_agent_risk.py  (+75 more)
(+24 files in other folders)
