[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rekit-factory"
version = "0.2.0"
description = "A durable, supervised dark factory for reverse engineering."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "batteryshark" }]
dependencies = [
  "muster @ git+https://github.com/batteryshark/muster.git",
  "pydantic-ai>=2.6,<3",
]

[project.scripts]
rekit-factory = "rekit_factory.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/rekit_factory"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]
